# libcfg

./: .autoexec.vim  Makefile.am  README.md  cfg.c  configure.ac  libcfg.pc.in  main.c  makefile
src/: cfg.c  cfg.h  main.c
